@@ -1,3 +1,10 @@
+2001-09-30  Glynn Foster  <glynn.foster@sun.com>
+
+	* gnome-calc.c: (display_expose), (create_button): Fixed 
+          buttons so that they expand/contract vertically. Fixed display
+	  so that numbers are always aligned to the right hand side. Maybe
+	  this should be using Pango for 2.0 :)
+
 2001-08-14  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* sr.c: Include <stdlib.h> to still a warning.
